@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/arch/ppc.py,v 1.13 2005/07/05 21:53:41 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/arch/ppc.py,v 1.14 2005/07/06 22:07:46 wolf31o2 Exp $
 
 import os,builder
 from catalyst_support import *
@@ -17,9 +17,9 @@ class generic_ppc(builder.generic):
 		self.settings["mainarch"]="ppc"
 		self.settings["CHOST"]="powerpc-unknown-linux-gnu"
 		if self.settings["hostarch"]=="ppc64":
-			if not os.path.exists("/usr/bin/powerpc32"):
-				raise CatalystError,"required /usr/bin/setarch executable not found."
-			self.settings["CHROOT"]="/usr/bin/powerpc32 chroot"
+			if not os.path.exists("/usr/bin/linux32"):
+				raise CatalystError,"required /usr/bin/linux32 executable not found."
+			self.settings["CHROOT"]="/usr/bin/linux32 chroot"
 		else:   
 			self.settings["CHROOT"]="chroot"
 
